ATM-Saptak | renamed pipelines

--- a/pipelines/deploy-registration.gocd.yaml
+++ b/pipelines/deploy-registration.gocd.yaml
@@ -1,6 +1,6 @@
 format_version: 3
 pipelines:
-  deploy-test:
+  deploy-registration:
     group: Deploy
     template: deploy
     label_template: ${COUNT}
