--- a/pipelines/deploy-product.gocd.yaml
+++ b/pipelines/deploy-product.gocd.yaml
@@ -1,6 +1,6 @@
 format_version: 3
 pipelines:
-  deploy-test:
+  deploy-product:
     group: Deploy
     template: deploy
     label_template: ${COUNT}
